// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckoutTodoItem > should render the component with a checkmark icon when isCompleted prop is true 1`] = `
<DocumentFragment>
  <button
    class="border border-0 p-0 bg-transparent"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-square-check fa-fw "
      data-icon="square-check"
      data-prefix="fas"
      focusable="false"
      font-size="36px"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`CheckoutTodoItem > should render the component with a square icon when isCompleted prop is false 1`] = `
<DocumentFragment>
  <button
    class="border border-0 p-0 bg-transparent"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-square fa-fw "
      data-icon="square"
      data-prefix="fas"
      focusable="false"
      font-size="36px"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 96C0 60.7 28.7 32 64 32H384c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96z"
        fill="currentColor"
      />
    </svg>
  </button>
</DocumentFragment>
`;
